tests/specs/ecosystem/std/archive/0_201_0.test
std/archive/0.201.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.201.0": "jsr:@std/internal@0.201.0"
    },
    "jsr": {
      "@std/internal@0.201.0": {
        "integrity": "adeb4ec7670087059f4803c022909f33f6e9153f9bd0cb6dd425614fc37bc3ed"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMeta, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                ~~~~~~
    at file://<tmpdir>/untar.ts:10:81

